<resources>
    <string name="app_name">Школьный дневник</string>
    <string name="version_info">Версия: 4.0.0</string>
    <string name="app_descr">Данная программа служит для комфортной записи расписания уроков и домашнего задания. В данном приложении можно отмечать выполнили вы домашнее задание или нет, исходя из этого вам будут приходить оповещения (напоминания) о том какие уроки нужно сделать на завтра. Данный дневник работает без интернета.</string>
    <string name="hello_text">В данном разделе осуществляется распознавание текста с фото документов!</string>
    <string name="vogu_header">Тула</string>
    <string name="year_header">2021 г.</string>
    <string name="drawer_open">Открыть боковое меню</string>
    <string name="drawer_close">Закрыть боковое меню</string>
    <string name="drawer_header_basic">Основное</string>
    <string name="drawer_item_main">Главная</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_exit">Выход</string>
    <string name="drawer_item_other">Прочее</string>
    <string name="drawer_item_about">О программе</string>
    <string name="drawer_item_connect">Обратная связь</string>
    <string name="choose_image_source_title">Пожалуйста выберите источник получения изображения документа:</string>
    <string name="open_camera_title">Открыть камеру</string>
    <string name="open_gallery_title">Открыть галерею</string>
    <string name="open_url_title">Открыть по прямой ссылке (URL)</string>
    <string name="url_image_enter_title">Введите URL картинки:</string>
    <string name="url_example">http://example.com/image.jpg</string>
    <string name="load">Загрузить</string>
    <string name="cancel">Отмена</string>
    <string name="image_editor_title">Редакт. изображения</string>
    <string name="please_wait_title">Пожалуйста подождите</string>
    <string name="image_processing">Обрабатываем изображение...</string>
    <string name="crop_error">Произошла ошибка при кадрировании изображения...</string>
    <string name="exit_question">Выйти из приложения?</string>
    <string name="exit_q_conf">Вы действительно хотите выйти?</string>
    <string name="exit">Выход</string>
    <string name="sending_message">Отправка сообщения...</string>
    <string name="result_header">Результат распознавания текста с изображения</string>
    <string name="result_pro_header">Приведенный ниже текст можно выделять, копировать, изменять или экспортировать в файлы</string>
    <string name="editText_hint">* тут будет размещаться распознанный текст, доступный для редактирования... *</string>
    <string name="progressBar_text">Обработка....\n\nПожалуйста подождите!</string>
    <string name="chooselang">Выберите язык распознаваемого текста:</string>
    <string name="choose_apptheme_title">Выберите тему приложения:</string>
    <string name="light_theme_title">Светлая тема</string>
    <string name="dark_theme_title">Темная тема</string>
    <string name="other_title">Прочее</string>
    <string name="setting_title">Основные настройки</string>
    <string name="clear_app_cache_title">Очистить кеш приложения</string>
    <string name="cleanup_success">Очистка успешна!</string>
    <string name="cleanup_error">Очистка не удалась!</string>
    <string name="errorH">Ошибка</string>
    <string name="export">ЭКСПОРТ</string>
    <string name="load_image_error">Произошла ошибка при загрузке изображения. Проверьте ссылку и интернет-соединение!</string>
    <string name="load_image_error_short">Произошла ошибка при загрузке изображения</string>
    <string name="choose_image_error">Ошибка. Вы не выбрали изображение!</string>
    <string name="access_storage_error">Произошла ошибка при получении доступа к внутренней памяти устройства.</string>
    <string name="camera_error_title">Ошибка. Пожалуйста попробуйте выполнить действие снова!</string>
    <string name="prefs_theme_key">theme</string>
    <string name="ocrprogresstext">Пожалуйста подождите \nОсуществляется распознавание текста с фото</string>
    <string name="ocrattention">Скорость распознавания зависит от:\n* мощности устройства\n* качества изображения\n* количества текста</string>
    <string name="chooseFormatHeader">Выберите формат, в котором хотите сохранить текст:</string>
    <string name="goToMain">НА ГЛАВНУЮ</string>
    <string name="saveTitle">Сохранить</string>
    <string name="errorSaving">При сохранении файла произошла ошибка! Пожалуйста попробуйте еще раз!</string>
    <string name="savingSuccess">Файл успешно сохранен!\n\nПуть: </string>
    <string name="enterFileName">Введите имя файла (без расширения):</string>
    <string name="exportFileNameaddition">Если данное поле оставить незаполненным, файлу присвоится имя, соответствующее текущей дате и времени</string>
    <string-array name="languages">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
    <string name="name_app">Школьный Дневник</string>
    <string name="name_app_header">Школьный \nДневник</string>
    <string name="Choose">Выберите раздел</string>
    <string name="schoolman">Школьник</string>
    <string name="student">Студент</string>
    <string name="Monday">Понедельник</string>
    <string name="Monday_Rasp">Введите расписание на понедельник</string>
    <string name="Prinyat">Принять</string>
    <string name="Skip">Пропустить</string>
    <string name="Tudesday_Rasp">Введите расписание на вторник</string>
    <string name="Tuesday">Вторник</string>
    <string name="Wend_Rasp">Введите расписание на среду</string>
    <string name="Wend">Среда</string>
    <string name="Thr_Rasp">Введите расписание на четверг</string>
    <string name="Thr">Четверг</string>
    <string name="Fri_Rasp">Введите расписание на пятницу</string>
    <string name="Fri">Пятница</string>
    <string name="Sat_Rasp">Введите расписание на субботу</string>
    <string name="Sat">Суббота</string>
    <string name="raspisanie">Расписание занятий</string>
    <string name="Enter_DZ">Введите ДЗ</string>
    <string name="sadsa">Понедельник</string>
    <string name="Menu_ScM">Ооо, вы новенький ;) \nСоздайте расписание на неделю \nДля этого нажмите на кнопку ниже.</string>
    <string name="Create">Создать расписание</string>
    <string name="Settings">Изменить расписание уроков</string>
    <string name="ocr">Распознование текста</string>
    <string name="Time_Settings">Вы в разделе изменения настроек времени</string>
    <string name="SetT1">1. Введите начало и конец первого урока</string>
    <string name="SetT2">2. Введите начало и конец второго урока</string>
    <string name="SetT3">3. Введите начало и конец третьего урока</string>
    <string name="SetT4">4. Введите начало и конец четвертого урока</string>
    <string name="SetT5">5. Введите начало и конец пятого урока</string>
    <string name="SetT6">6. Введите начало и конец шестого урока</string>
    <string name="SetT7">7. Введите начало и конец седьмого урока</string>
    <string name="SetT8">8. Введите начало и конец восьмого урока</string>
    <string name="TimeSet">Изменить время уроков</string>
    <string name="ClassListSet">Изменить список учеников</string>
    <string name="ClassListAndSubSet">Изменить список предметов у класса</string>
    <string name="input_1">1. Введите название 1 предмета</string>
    <string name="input_2">2. Введите название 2 предмета</string>
    <string name="input_3">3. Введите название 3 предмета</string>
    <string name="input_4">4. Введите название 4 предмета</string>
    <string name="input_5">5. Введите название 5 предмета</string>
    <string name="input_6">6. Введите название 6 предмета</string>
    <string name="input_7">7. Введите название 7 предмета</string>
    <string name="input_8">8. Введите название 8 предмета</string>
    <string name="Help">Помощь</string>
    <string name="ObuchalkaMenu">В данном разделе вы можете выбрать день недели и посмотреть расписание, также менять расписание и устанавливать оповещения.</string>
    <string name="Notification">Установить оповещения</string>
    <string name="NotifSet">Установить время</string>
    <string name="NotifDel">Выключить оповещения</string>
    <string name="NotifSetDef">Оповещения выключены</string>
    <string name="NotifSetTime">Оповещение сработает в: </string>
    <string name="select_lang">Изменить язык</string>
    <string name="lang">Язык</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit_title">Вы действительно хотите выйти ?</string>
    <string name="libr">Библиотека</string>
    <string name="Friady">Пятница</string>
    <string name="change_rasp_m">Изменить расписание на понедельник</string>
    <string name="change_rasp_t">Изменить расписание на вторник</string>
    <string name="change_rasp_w">Изменить расписание на среду</string>
    <string name="change_rasp_th">Изменить расписание на четверг</string>
    <string name="change_rasp_f">Изменить расписание на пятницу</string>
    <string name="change_rasp_s">Изменить расписание на субботу</string>
    <string name="nomer_predmeta">Порядковый номер предмета</string>
    <string name="nachalo_uroka">Время начало урока</string>
    <string name="konec_uroka">Время конца урока</string>
    <string name="predmet">Название урока</string>
    <string name="DZ">В данное поле можно вводить домашнее задание (ДЗ) </string>
    <string name="galochka">Оценка за предмет</string>
    <string name="click_TapTargetView">Для продолжения тыкните в белый круг</string>
    <string name="setnotif_click_TapTargetView">После нажатия данной кнопки, необходимо выбрать время, затем, каждый день, в выбранное время, будет приходить оповещение о том, какие предметы (уроки) нужно подготовить на завтра. Оповещения будут приходить только по предметам, где есть домашнее задание</string>
    <string name="delnotif_click_TapTargetView">После нажатия данной кнопки, все уведомления будут отключены</string>
    <string name="first_click_TapTargetView">Давайте заполним дневник Вводите в данные поля названия предметов</string>
    <string name="notfirst_click_TapTargetView">Вводите в данные поля названия предметов. Не рекомендуется вводить название предмета длиннее 11 символов. Чтобы вписать предмет длиннее 11 символов, используйте сокращения, например: Рус.яз, Общ., Ин.яз</string>
    <string name="accept_click_TapTargetView">После ввода названия предметов нажмите кнопку Принять. Если у вас меньше 8 предметов, то запишите названия ваших предметов, в те поля где ничего нет ничего не записывайте. Если данный день у вас выходной, то ничего не записывайте, нажмите кнопку Принять, программа перенесет вас в следующий раздел</string>
    <string name="setStartTime_click_TapTargetView">Введите время начала урока</string>
    <string name="setEndTime_click_TapTargetView">Введите время конца урока</string>
    <string name="setTime_click_TapTargetView">Введите время уроков равное количеству уроков, если у вас максимум 6 уроков, то должно быть время для 6 или более уроков. После ввода нажмите кнопку Принять</string>
    <string name="Menu1_click_TapTargetView">Это дни недели Внутри каждого дня находится: расписание на день, время начала и конца уроков, порядковый номер предмета, ввод домашнего задания</string>
    <string name="Menu2_click_TapTargetView">В данном разделе можно изменить расписание и время начала и конца уроков</string>
    <string name="Menu3_click_TapTargetView">В данном разделе можно установить оповещения</string>
    <string name="Rasp1">Расписание на ПОНЕДЕЛЬНИК не создано</string>
    <string name="Rasp2">Расписание на ВТОРНИК не создано</string>
    <string name="Rasp3">Расписание на СРЕДУ не создано</string>
    <string name="Rasp4">Расписание на ЧЕТВЕРГ не создано</string>
    <string name="Rasp5">Расписание на ПЯТНИЦУ не создано</string>
    <string name="Rasp6">Расписание на СУББОТУ не создано</string>
    <string name="TimePicker_yes">Ок</string>
    <string name="widget_rasp">Расписание</string>
</resources>