<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFon"
    tools:context=".ActivitySetWenesday">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TextView
            android:id="@+id/tvWRasp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/Wend_Rasp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etW1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_1"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/etW2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_2"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/etW3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_3"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/etW4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_4"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/etW5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_5"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/etW6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_6"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/etW7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_7"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/etW8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_8"
            android:maxLength="20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnWAccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/btn_round"
                android:paddingLeft="80sp"
                android:paddingRight="80sp"
                android:text="@string/Prinyat" />

            <Button
                android:id="@+id/btnWHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_help"
                android:layout_marginBottom="10dp"
                android:text="@string/Help" />
        </LinearLayout>
    </TableLayout>

</ScrollView>