<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFon"
    tools:context=".ActivitySetFriday">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TextView
            android:id="@+id/tvFrRasp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/Fri_Rasp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_1"
            android:maxLength="20"
            android:inputType="textPersonName|textCapWords" />

        <EditText
            android:id="@+id/etFr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/input_2"
            android:maxLength="20"
            android:inputType="textPersonName|textCapWords" />

        <EditText
            android:id="@+id/etFr3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:maxLength="20"
            android:hint="@string/input_3"/>

        <EditText
            android:id="@+id/etFr4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:maxLength="20"
            android:hint="@string/input_4" />

        <EditText
            android:id="@+id/etFr5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:maxLength="20"
            android:hint="@string/input_5" />

        <EditText
            android:id="@+id/etFr6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:maxLength="20"
            android:hint="@string/input_6" />

        <EditText
            android:id="@+id/etFr7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:maxLength="20"
            android:hint="@string/input_7" />

        <EditText
            android:id="@+id/etFr8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:maxLength="20"
            android:hint="@string/input_8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFrAccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/btn_round"
                android:paddingLeft="80sp"
                android:paddingRight="80sp"
                android:text="@string/Prinyat" />

            <Button
                android:id="@+id/btnFrHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_help"
                android:layout_marginBottom="10dp"
                android:text="@string/Help" />
        </LinearLayout>
    </TableLayout>

</ScrollView>