<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00008B"
    tools:context=".ui.main.SettingsStudyMenuFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/Settings"
            android:textSize="28sp"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSetMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMonday"
            android:textColor="@color/colorText"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:text="@string/sadsa" />

        <Button
            android:id="@+id/btnSetTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTuesday"
            android:textColor="@color/colorText"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:text="@string/Tuesday" />

        <Button
            android:id="@+id/btnSetWenesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWend"
            android:textColor="@color/colorText"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:text="@string/Wend" />

        <Button
            android:id="@+id/btnSetThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTh"
            android:textColor="@color/colorText"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:text="@string/Thr" />

        <Button
            android:id="@+id/btnSetFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorFr"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/colorText"
            android:text="@string/Fri" />

        <Button
            android:id="@+id/btnSetSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSat"
            android:textColor="@color/colorText"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:text="@string/Sat" />

    </TableLayout>

</ScrollView>